# iKanban

./: .claudeignore  .dockerignore  .env  .env.example  .gitignore  .mcp.json  .vibe-check.toml  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.frontend  Dockerfile.prebuilt  IMPLEMENTATION_SUMMARY.md  Makefile  PR_MERGE_CALLBACK_STATUS.md  README.md  SCRATCHPAD.md  SQLX_CACHE_NOTE.md  TASK_COMPLETION_REPORT.md  claude-local.sh  docker-entrypoint.sh  fly.api.toml  fly.frontend.toml  fly.toml  package.json  plan.md  pnpm-lock.yaml  rust-toolchain.toml
crates/db/: Cargo.toml
crates/db/.sqlx/: query-043aa47b7fc12fe0e1851b470623bb35fd3683691cfe3a12df3d32dfd501eeb5.json  query-04b4a94936e252eae5c10d1a1b1d0685b97102840d905207730fc891ce553d2f.json  query-066723f137b290d5863918c976100b674ce2f08c75cf53705ddc2259b9e64093.json  query-088fc41423525ea10da1a43856faa48c46a101d8d09e5d69e73a8573c26b8922.json  query-089ab7af5f065fd097e7e233347badf8467d4ad702ea33772fba8e0622f861b7.json  query-0c2631b6ce1e9453d39c0cdb9a617b35db27acdc27e5c85bebbfd514a1522595.json  query-1163d3dcc69f930d52dbf8175689aa16b4419b7c1bead43eedef4c82e8a5c442.json  query-1394d6317296aa95af82b78e038e40a929ad163d4986208bfebb243ed7372199.json  query-13f94471e184587c4b6636ac1b56c3d65e4f8598be32dc153cce79c810944abf.json  query-15948e9fb8f4a566fba70ce86841386566e84bb4f9321fcda5dc8c2eed858ef5.json  query-15c8f83dca74c13fff90aeef3b1d10e73f7c9c5ca90fff240c69ff3107b70b6d.json  query-18716516b8473f0832677113853a73500423c944b642cdcd10790028ba6ebaad.json  query-1addda3344e64e5711635e05fa12f12992acaf9705d5c23a314a67372757f32f.json  query-1b30eabc605f4f81e7dc980342f66a3f3f55eb84a29475de6a67ab48388188b3.json  query-1d1e6e666a1bebda4a5bed5ba09ec2c596ca614bc41c88d5bd571513190d9210.json  query-1d1fccd2d177a09d3e1d091ca90349f2fc5a5a77e36bec46765f98cd4ee9c837.json  query-1ea1ac1a3d569e40347f512dc6f6c1422d0cf40933240b933ffc81bea1c5f9cc.json  query-26fa83ed1e458e890a2e9ba1e00ab582142578b0c151f7d53f8282a334cf5d5f.json  query-29666727324a2266a5f1360dc45286e2ccded5e8691dc4b256af08846f256b72.json  query-296ef22ad7efd4313affb15e971a23ea082a5285ae0a56a92c4c5b3261aab7f8.json  query-2b70959e2dbbd6d959a47be9794ca6cfbbaec4fd5c3ed719487e28a7ff434752.json  query-2c9c27d9781af4e7c1b5a6f15530c420255fcf6844fdc708422da887760c2693.json  query-320de39a6ec993d496484a6c5a28fd874a82575e9d53aed4772ec67ee21c391f.json  query-341d78607c9347df27245a3b258db14e5efd50672af2ec233ecc8eec0f7bb6b5.json  query-3422cee720650529b0345f6c77f18f190f5adc51025458b103260af3eef5be9b.json  query-352a764ee4622555506a399f88fa000bd3d45039c2457d7c8c6e8b04a6ecc847.json  query-36be543263b85e5b6043a121a79131583a64a1778e949e70cff555e68fcbc763.json  query-376055a269072d9e4bfa1f1810d28a1c18da8a765780814245cccb54fedd8770.json  query-3893e8aa7f30ac45d817eb19bbea6c4afc9ab8ad001039593350b658ea970f3f.json  query-3960255f06f9753bc116d1aa1d65e0c5bf402d52130057fbaa2c9da7f0173e64.json  query-3a0237028a9af3db912004eabb9f935a3cc776a655c71fc23cdbd67f913a4222.json  query-3a1b83dfb3edb135228a636e1c65246059256263ddbe682a03c0d4f96e35450a.json  query-3b396724a9e42741fe7f7d3ba021c0dc40f744dc8fd53d550534fabd3e4fc39c.json  query-3b5860c66dbf586d1303f138375f8de812e71190f57c0e0d83152530c957778e.json  query-40df43206ba2975251276e63b8cf370c8f67f8e55c97ca9c388b98e505d731bf.json  query-4352b4c7bf4c2db74fe6ac53d4fd8adb36d618073b123adf6d28d17ee2e2f0d5.json  query-447db588d63b0fe96c0cca24e0390e2cd041ce7da3ff7adb6bb908bb54413f8a.json  query-44fce9481846f43dca6dcdb4b318d6a63527046a653624b1ce0d94840293e3bb.json  query-4531720c1c3fb7b4ac6138dc922c60610cc09efa2034d5663d48c858138e6dc9.json  query-46139a0b9debe5889e7d35b3cf9b20edec27573bb555a66fbb27cd78161392af.json  (+128 more)
crates/db/migrations/: 20251229000000_create_teams.sql  20251229100000_add_team_id_to_tasks.sql  20251229110000_add_task_fields.sql  20251229120000_add_project_fields.sql  20251230100000_add_team_identifiers_and_issue_numbers.sql  20260103000001_create_team_repos.sql  20260103100000_workspace_github_connection.sql  20260103200000_add_folder_local_path.sql  20260103300000_create_team_members.sql  20260103400000_add_invitation_token.sql  20260104100000_create_task_comments.sql  20260104200000_create_task_document_links.sql  20260104300000_add_team_slug.sql  20260105100000_add_clerk_fields_to_members.sql
crates/db/src/: lib.rs  libsql_db.rs  registry.rs  turso.rs
crates/db/src/models/: attempt_repo.rs  coding_agent_turn.rs  document.rs  execution_process.rs  executor_session.rs  github_connection.rs  image.rs  merge.rs  mod.rs  project.rs  repo.rs  session.rs  task.rs  task_attempt.rs  task_comment.rs  task_document_link.rs  team.rs  team_member.rs  workspace.rs
tools/vibe-check/: README.md  pyproject.toml
tools/vibe-check/vibe_check/: cli.py  config.py
tools/vibe-check/vibe_check/checkers/: __init__.py  backend.py  frontend.py  security.py
vibe-backend/crates/db/: Cargo.toml
vibe-backend/crates/db/.sqlx/: query-0211790f0d006fe99bb78454512996e95363e0e582bb3eeab2b0688fc16f296d.json  query-02e075d34acb6ef1bdbd6e1e383b1b5eb73b286080c764a6286e39f32d49ef08.json  query-0371972367946734439cfb0f324be412189bac17a6e03968ca0efa2a8691d140.json  query-04382ef92c7ca82b7a3f821f4eb521004fbe77c91748241609f3c88e9928ba28.json  query-050ed302a0794a46c3ad8e819c831e70de59fff877a856f1e314ee9b8f2125da.json  query-07a71357d22f930eef3bfe08640dc1614d1c3b7a3ee850780663e804e7d3a708.json  query-0884ba5a21617b2606308dcd534be132d24ae1f968134229ebe9749164eb63a9.json  query-098e2b851ab7e8d23cff2aa291add2da024e1cba8df81f66075486de88708349.json  query-0acf56d76864947bfbc020d62aee697b1d47428ffe749a130a6d63f205d5d873.json  query-0b70caacda39e9a5a26e15247d1d1002a336d7f4f895591c9ad26d009c388852.json  query-0bea2e21bac65664906efdb7c09ec1a7dc2fe5ef5dba78bb14cdb1d9215ac51b.json  query-0c31e17abbff7e30328e42429b5916c197c4cad357b1ea80bba32288e85fb441.json  query-0d0599491ba8d2a7ce6213078870ed80ede5235d4e6485c32ebd592a165b179b.json  query-0df42bdea22e22649b5786ea93fd6c2be126f0ef0ce4c680b294613029aa292e.json  (+148 more)
vibe-backend/crates/db/src/: lib.rs  (+2 more)
vibe-backend/crates/remote/: Cargo.toml
(+1954 files in other folders)
