[package]
name = "db"
version = "0.0.142"
edition = "2024"

[features]
default = []
turso = ["libsql"]

[dependencies]
utils = { path = "../utils" }
executors = { path = "../executors" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { workspace = true }

# Turso support (optional)
libsql = { version = "0.9", optional = true }

