[package]
name = "db"
version = "0.0.142"
edition = "2024"

[features]
default = []

[dependencies]
utils = { path = "../utils" }
executors = { path = "../executors" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { workspace = true }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.23"
