[package]
name = "remote"
version = "0.0.142"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
db_crate = { path = "../db", package = "db" }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
secrecy = "0.10.3"
sentry = { version = "0.41.0", features = ["anyhow", "backtrace", "panic", "debug-images"] }
sentry-tracing = { version = "0.41.0", features = ["backtrace"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate", "ipnetwork"] }
ipnetwork = "0.20"
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = "0.2"
thiserror = { workspace = true }
ts-rs = { workspace = true }
utils = { path = "../utils" }
db = { path = "../db" }
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = "9"
rand = "0.9"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
hex = "0.4"
urlencoding = "2.1"
url = "2.5"
base64 = "0.22"
aws-config = { version = "1.5", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = { version = "1.65", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-credential-types = "1.2"
tempfile = "3"
tar = "0.4"
flate2 = "1.0"
# Cache (TENANCY-QW-02: IKA-202)
moka = { version = "0.12", features = ["future"] }
# Rate limiting (TENANCY-QW-03: IKA-203)
tower_governor = "0.4"
governor = "0.6"
# Stripe payment integration (IKA-181)
async-stripe = { version = "0.41", default-features = false, features = ["runtime-tokio-hyper", "checkout", "billing"] }
